[package]
name = "downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.11"
tokio = { version = "1", features = ["full"] }
urlencoding = "2.1.2"
serde_json = "1.0.85"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.13.0"
futures = "0.3.24"